# django-system-parameters

./: setup.cfg
django_system_params/: admin.py  apps.py  mixins.py  models.py
django_system_params/management/commands/: createsystemparams.py  loadsystemparams.py
django_system_params/migrations/: 0001_initial.py
